@@ -4,6 +4,7 @@ https://github.com/devinsays/visual/commits/master
 Visual 0.9
 
 - Remove light.css from codebase
+- Add featured images to the RSS feeds
 
 Visual 0.8
 
